Fixed problem with multiple rows not showing correct and incorrect height

--- a/src/_templates/default/static/css/styles.css
+++ b/src/_templates/default/static/css/styles.css
@@ -11346,9 +11346,8 @@ body {
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   min-width: 0;
-  flex-grow: 1;
   min-height: calc(100vh - 125px);
 }
 
